# parallel_prog_labs

./: CMakeLists.txt  README.md  histogram.c  io-util.c  io-util.cpp  io-util.h  list.h  mandelbrot.c  monte.c  n-body.cpp  particle.cpp  particle.h  rand.c  rand.cpp  rand.h  util.h  vector.cpp  vector.h
